force-app/main/default/objects/Budget_vs_Expenses__c/Budget_vs_Expenses__c.object-meta.xml
<CustomObject>
    <label>Budget vs Expenses</label>
    <nameField>
        <displayFormat>BEX-{0000}</displayFormat>
        <label>Budget Vs Expenses Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget vs Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>