force-app/main/default/objects/Budget_vs_Expenses__c/fields/Actual_Expenses_EREPL__c.field-meta.xml
<CustomField>
    <fullName>Actual_Expenses_EREPL__c</fullName>
    <label>Actual Expenses EREPL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>