force-app/main/default/objects/Budget_vs_Expenses__c/fields/Actual_Expenses_RREPL__c.field-meta.xml
<CustomField>
    <fullName>Actual_Expenses_RREPL__c</fullName>
    <label>Actual Expenses RREPL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>