force-app/main/default/objects/Budget_vs_Expenses__c/fields/Budget_in_Cr__c.field-meta.xml
<CustomField>
    <fullName>Budget_in_Cr__c</fullName>
    <label>Budget in Cr.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>