force-app/main/default/objects/Budget_vs_Expenses__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Budget vs Expenses</relationshipLabel>
    <relationshipName>Budget_vs_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>