force-app/main/default/objects/Budget_vs_Expenses__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <description>to store user&apos;s remarks</description>
    <label>Remarks</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>