force-app/main/default/objects/Budget_vs_Expenses__c/fields/Sub_sub_category__c.field-meta.xml
<CustomField>
    <fullName>Sub_sub_category__c</fullName>
    <label>Sub sub category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>99 acres</fullName>
            </value>
            <value>
                <fullName>Agency - Image purchases</fullName>
            </value>
            <value>
                <fullName>Alchemist/Lowe/Etc.</fullName>
            </value>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>BT</fullName>
            </value>
            <value>
                <fullName>Call Centre - Presales - Telecallers - CBSL/Velox/MIST/Star Connect</fullName>
            </value>
            <value>
                <fullName>Celebrity association</fullName>
            </value>
            <value>
                <fullName>Chatbot</fullName>
            </value>
            <value>
                <fullName>Chocolates/ Booking Hampers</fullName>
            </value>
            <value>
                <fullName>CLA</fullName>
            </value>
            <value>
                <fullName>Collaterals</fullName>
            </value>
            <value>
                <fullName>CP brokerage</fullName>
            </value>
            <value>
                <fullName>CP giveaways</fullName>
            </value>
            <value>
                <fullName>CP incentive/Vouchers</fullName>
            </value>
            <value>
                <fullName>CP Meet</fullName>
            </value>
            <value>
                <fullName>CP Support</fullName>
            </value>
            <value>
                <fullName>CP Tellecallers</fullName>
            </value>
            <value>
                <fullName>CSAT</fullName>
            </value>
            <value>
                <fullName>Drone shoot / Location video / Virtual tour</fullName>
            </value>
            <value>
                <fullName>Emailers</fullName>
            </value>
            <value>
                <fullName>E-modules</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Events &amp; Expo</fullName>
            </value>
            <value>
                <fullName>Experience Centre</fullName>
            </value>
            <value>
                <fullName>Gantry</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Hoardings</fullName>
            </value>
            <value>
                <fullName>Housing.com</fullName>
            </value>
            <value>
                <fullName>Images package</fullName>
            </value>
            <value>
                <fullName>Inserts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>