force-app/main/default/objects/Budget_vs_Expenses__c/fields/WBS_name_as_per_SAP__c.field-meta.xml
<CustomField>
    <fullName>WBS_name_as_per_SAP__c</fullName>
    <label>WBS name as per SAP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brand ambassador/ influencer</fullName>
            </value>
            <value>
                <fullName>Brochures/Booking Forms/Collateral</fullName>
            </value>
            <value>
                <fullName>BTL Activities + Call centre</fullName>
            </value>
            <value>
                <fullName>Digital advertising</fullName>
            </value>
            <value>
                <fullName>Films/Walkthrough/Scale Model</fullName>
            </value>
            <value>
                <fullName>Misc (Consumer promotion, Sponsorship &amp; Sundries)</fullName>
            </value>
            <value>
                <fullName>Outdoor advertising</fullName>
            </value>
            <value>
                <fullName>PR</fullName>
            </value>
            <value>
                <fullName>Print advertising</fullName>
            </value>
            <value>
                <fullName>Radio Advertising</fullName>
            </value>
            <value>
                <fullName>Retainer/Consultant/Research</fullName>
            </value>
            <value>
                <fullName>Site branding/signages/Site decor</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>CP Meet</fullName>
            </value>
            <value>
                <fullName>Loyalty Event</fullName>
            </value>
            <value>
                <fullName>Corp/ Soc Activation</fullName>
            </value>
            <value>
                <fullName>AV</fullName>
            </value>
            <value>
                <fullName>Site Branding (External)</fullName>
            </value>
            <value>
                <fullName>CP Support</fullName>
            </value>
            <value>
                <fullName>Tellecallers</fullName>
            </value>
            <value>
                <fullName>VDNB Event</fullName>
            </value>
            <value>
                <fullName>Pole Kiosks</fullName>
            </value>
            <value>
                <fullName>Property Expo</fullName>
            </value>
            <value>
                <fullName>Photoshoot</fullName>
            </value>
            <value>
                <fullName>VR tour</fullName>
            </value>
            <value>
                <fullName>Events &amp; expo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>