force-app/main/default/objects/Budget_vs_Expenses__c/recordTypes/Budget.recordType-meta.xml
<RecordType>
    <fullName>Budget</fullName>
    <active>true</active>
    <description>This is Record type for Budget which will be WBS wise</description>
    <label>Budget</label>
</RecordType>