force-app/main/default/objects/Budget_vs_Expenses__c/recordTypes/Expenses.recordType-meta.xml
<RecordType>
    <fullName>Expenses</fullName>
    <active>true</active>
    <description>This is Record type for Expenses which will be Project wise</description>
    <label>Expenses</label>
</RecordType>