force-app/main/default/objects/Budget_vs_Expenses__c/listViews/Expenses_Records.listView-meta.xml
<ListView>
    <fullName>Expenses_Records</fullName>
    <columns>NAME</columns>
    <columns>Actual_Expenses_EIPL__c</columns>
    <columns>Actual_Expenses_EREPL__c</columns>
    <columns>Actual_Expenses_HHPL__c</columns>
    <columns>Actual_Expenses_HHPL_2__c</columns>
    <columns>Actual_Expenses_Horizon__c</columns>
    <columns>Actual_Expenses_REPL__c</columns>
    <columns>Actual_Expenses_RREPL__c</columns>
    <columns>Actual_Expenses_RRPL__c</columns>
    <columns>Actual_Expenses_SIPL__c</columns>
    <columns>Actual_Expenses_WACL__c</columns>
    <columns>Actual_Expenses_WRPL__c</columns>
    <columns>WBS_name_as_per_SAP__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Budget_vs_Expenses__c.Expenses</value>
    </filters>
    <label>Expenses Records</label>
</ListView>